--- a/Strings/en-US/Resources.resw
+++ b/Strings/en-US/Resources.resw
@@ -133,7 +133,7 @@
     <value>Settings</value>
   </data>
   <data name="NoReminderSelectedPage_Text.Text" xml:space="preserve">
-    <value>Select a reminder from the list to the left to see its details.</value>
+    <value>Select a reminder from the list to the left to see its details or click the plus button to add a new one.</value>
   </data>
   <data name="ReminderDetailsPage_Create.Content" xml:space="preserve">
     <value>Create</value>
@@ -141,11 +141,23 @@
   <data name="ReminderDetailsPage_Delete.Content" xml:space="preserve">
     <value>Delete</value>
   </data>
+  <data name="ReminderDetailsPage_Error_InvalidDate" xml:space="preserve">
+    <value>The date specified is invalid.</value>
+  </data>
+  <data name="ReminderDetailsPage_Error_NoName" xml:space="preserve">
+    <value>You must specify a name for the reminder.</value>
+  </data>
   <data name="ReminderDetailsPage_Name.PlaceholderText" xml:space="preserve">
     <value>Reminder name</value>
   </data>
   <data name="ReminderDetailsPage_NotificationText.Header" xml:space="preserve">
     <value>Notification text</value>
+  </data>
+  <data name="ReminderDetailsPage_NotificationText_EmptyNamePlaceholder" xml:space="preserve">
+    <value>[Reminder name]</value>
+  </data>
+  <data name="ReminderDetailsPage_PickDate.[using:Microsoft.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Pick date</value>
   </data>
   <data name="ReminderDetailsPage_RecurringPeriod.Text" xml:space="preserve">
     <value>Recurring period</value>
@@ -167,6 +179,21 @@
   </data>
   <data name="ReminderDetailsPage_StartDate.Text" xml:space="preserve">
     <value>Start date</value>
+  </data>
+  <data name="ReminderDetailsPage_StartDateLabel_NonRecurring" xml:space="preserve">
+    <value>Date</value>
+  </data>
+  <data name="ReminderDetailsPage_StartDateLabel_Recurring" xml:space="preserve">
+    <value>Start date</value>
+  </data>
+  <data name="ReminderDetailsPage_StartDay.[using:Microsoft.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Day</value>
+  </data>
+  <data name="ReminderDetailsPage_StartMonth.[using:Microsoft.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Month</value>
+  </data>
+  <data name="ReminderDetailsPage_StartYear.[using:Microsoft.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Year</value>
   </data>
   <data name="ReminderDetailsPage_Type.Header" xml:space="preserve">
     <value>Reminder type</value>
